<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="isLoading" type="boolean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loading_cars"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/loading_cars"
            android:textAlignment="center"
            app:visibleGone="@{isLoading}"/>

        <LinearLayout
            android:id="@+id/llShopCartList"
            android:layout_width="match_parent"
            android:layout_height="570dp"
            android:background="@color/cardview_light_background"
            android:orientation="vertical"
            app:visibleGone="@{!isLoading}">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="@dimen/car_header1"
                android:text="@string/cars"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/shop_car_list"
                android:contentDescription="@string/car_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="LinearLayoutManager"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llEndShopping"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/cardview_light_background"
            android:orientation="vertical"
            app:visibleGone="@{!isLoading}">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_finalizar_compra"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/layout_button_bg_shopping_cart"
                android:onClick="onClickFinish"
                android:padding="13dp"
                tools:ignore="NotSibling">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="@string/end_shopping"
                    android:textColor="#ffffff"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>
</layout>