<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="car" type="com.ccortez.desafiobrqapplicationkotlin.service.model.Car"/>
        <variable name="callback" type="com.ccortez.desafiobrqapplicationkotlin.view.callback.ShopCartClickCallback"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp">

        <ImageView
            android:id="@+id/car_image"
            android:layout_width="191dp"
            android:layout_height="130dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/car_qtd2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_qty"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingRight="@dimen/padd_10"
            app:layout_constraintEnd_toEndOf="@+id/car_image"
            app:layout_constraintTop_toBottomOf="@+id/car_image" />

        <TextView
            android:id="@+id/car_qtd3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/car_price"
            android:textSize="@dimen/car_text"
            app:layout_constraintStart_toEndOf="@+id/car_qtd2"
            app:layout_constraintEnd_toEndOf="@+id/car_image"
            app:layout_constraintTop_toBottomOf="@+id/car_image"
            android:text="@{String.valueOf(car.quantidade)}"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/car_name"
            android:text="@{car.nome}"
            android:textSize="@dimen/car_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/car_image"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_mais_detalhes"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/name"
            android:background="@drawable/layout_button_bg"
            android:onClick="@{() ->  callback.onClick(car)}"
            android:padding="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/car_image"
            app:layout_constraintTop_toBottomOf="@+id/name"
            tools:ignore="NotSibling">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/details"
                android:textColor="#ffffff"
                android:textSize="17dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/car_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.format(@string/car_price, car.preco)}"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingRight="@dimen/padd_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/car_image"
            app:layout_constraintTop_toBottomOf="@+id/btn_mais_detalhes" />

        <TextView
            android:id="@+id/car_price2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/car_price"
            android:textSize="@dimen/car_text"
            app:layout_constraintStart_toEndOf="@+id/car_price"
            app:layout_constraintTop_toBottomOf="@+id/btn_mais_detalhes"
            android:text="@{String.valueOf(car.preco)}"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_remover_carrinho"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/car_price"
            android:background="@drawable/layout_button_bg_shopping_cart"
            android:onClick="@{() ->  callback.onClickRemoveFromCart(car)}"
            android:padding="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/car_image"
            app:layout_constraintTop_toBottomOf="@+id/car_price"
            tools:ignore="NotSibling">

            <ImageView
                android:id="@+id/img_shop_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_remove_shop_cart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.101"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/car_price" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/remove_shop_cart"
                android:textColor="#ffffff"
                android:textSize="12dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_shop_cart"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>