<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="car" type="com.ccortez.desafiobrqapplicationkotlin.service.model.Car"/>
        <variable name="callback" type="com.ccortez.desafiobrqapplicationkotlin.view.callback.CarClickCallback"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_height="150dp">

        <ImageView
            android:id="@+id/car_image"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0.0"
            tools:layout_editor_absoluteY="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/car_name"
            android:textStyle="bold"
            android:textSize="@dimen/car_text"
            android:text="@{car.nome}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/car_image"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_mais_detalhes"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/car_image"
            app:layout_constraintTop_toBottomOf="@+id/name"
            android:background="@drawable/layout_button_bg"
            android:onClick="@{() ->  callback.onClick(car)}"
            android:padding="13dp"
            tools:ignore="NotSibling">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/details"
                android:textColor="#ffffff"
                android:textSize="17dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/car_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@{String.valueOf(car.preco)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/car_image"
            app:layout_constraintTop_toBottomOf="@+id/btn_mais_detalhes"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_colocar_carrinho"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/car_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/car_image"
            app:layout_constraintTop_toBottomOf="@+id/car_price"
            android:background="@drawable/layout_button_bg_shopping_cart"
            android:onClick="@{() ->  callback.onClickPutInCart(car)}"
            android:padding="13dp"
            tools:ignore="NotSibling">

            <ImageView
                android:id="@+id/img_shop_cart"
                android:src="@drawable/ic_shop_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.101"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/car_price"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/put_shop_cart"
                android:textColor="#ffffff"
                android:textSize="12dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_shop_cart"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>